--- a/flask-ws-register/requirements.txt
+++ b/flask-ws-register/requirements.txt
@@ -1,63 +1,97 @@
-altgraph==0.10.2
-asn1crypto==0.24.0
-bdist-mpkg==0.5.0
-cffi==1.12.2
+appdirs==1.4.3
+appnope==0.1.0
+attrs==19.3.0
+automata-lib==3.1.0.post1
+backcall==0.1.0
+backports.csv==1.0.7
+beautifulsoup4==4.8.2
+bleach==3.1.0
+bs4==0.0.1
+certifi==2019.11.28
+chardet==3.0.4
 Click==7.0
-cryptography==2.6.1
-enum34==1.1.6
+control==0.8.3
+cycler==0.10.0
+decorator==4.4.1
+defusedxml==0.6.0
+Deprecated==1.2.4
+distlib==0.3.0
+entrypoints==0.3
+filelock==3.0.12
 Flask==1.1.1
-future==0.17.1
-gunicorn==19.10.0
-ipaddress==1.0.22
+future==0.18.2
+gunicorn==20.0.4
+idna==2.8
+importlib-metadata==1.4.0
+ipykernel==5.1.3
+ipyparallel==6.2.4
+ipython==7.10.2
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
 itsdangerous==1.1.0
+jedi==0.15.1
 Jinja2==2.11.1
-macholib==1.5.1
+jsonschema==3.2.0
+jupyter-client==5.3.4
+jupyter-core==4.6.1
+keyring==12.0.2
+kiwisolver==1.1.0
 MarkupSafe==1.1.1
-matplotlib==1.3.1
-modulegraph==0.10.4
-py2app==0.7.3
-pycparser==2.19
-pyobjc-core==2.5.1
-pyobjc-framework-Accounts==2.5.1
-pyobjc-framework-AddressBook==2.5.1
-pyobjc-framework-AppleScriptKit==2.5.1
-pyobjc-framework-AppleScriptObjC==2.5.1
-pyobjc-framework-Automator==2.5.1
-pyobjc-framework-CFNetwork==2.5.1
-pyobjc-framework-Cocoa==2.5.1
-pyobjc-framework-Collaboration==2.5.1
-pyobjc-framework-CoreData==2.5.1
-pyobjc-framework-CoreLocation==2.5.1
-pyobjc-framework-CoreText==2.5.1
-pyobjc-framework-DictionaryServices==2.5.1
-pyobjc-framework-EventKit==2.5.1
-pyobjc-framework-ExceptionHandling==2.5.1
-pyobjc-framework-FSEvents==2.5.1
-pyobjc-framework-InputMethodKit==2.5.1
-pyobjc-framework-InstallerPlugins==2.5.1
-pyobjc-framework-InstantMessage==2.5.1
-pyobjc-framework-LatentSemanticMapping==2.5.1
-pyobjc-framework-LaunchServices==2.5.1
-pyobjc-framework-Message==2.5.1
-pyobjc-framework-OpenDirectory==2.5.1
-pyobjc-framework-PreferencePanes==2.5.1
-pyobjc-framework-PubSub==2.5.1
-pyobjc-framework-QTKit==2.5.1
-pyobjc-framework-Quartz==2.5.1
-pyobjc-framework-ScreenSaver==2.5.1
-pyobjc-framework-ScriptingBridge==2.5.1
-pyobjc-framework-SearchKit==2.5.1
-pyobjc-framework-ServiceManagement==2.5.1
-pyobjc-framework-Social==2.5.1
-pyobjc-framework-SyncServices==2.5.1
-pyobjc-framework-SystemConfiguration==2.5.1
-pyobjc-framework-WebKit==2.5.1
-pyOpenSSL==19.0.0
-pyparsing==2.0.1
-python-dateutil==1.5
-pytz==2013.7
-scipy==0.13.0b1
-six==1.12.0
-vboxapi==1.0
+matplotlib==3.1.2
+mercurial==5.3
+metakernel==0.24.3
+mistune==0.8.4
+more-itertools==8.1.0
+mpmath==1.1.0
+nbconvert==5.6.1
+nbformat==4.2.0
+networkx==2.4
+notebook==6.0.3
+numpy==1.17.4
+octave-kernel==0.31.0
+opencv-python==4.1.2.30
+pandas==0.25.3
+pandocfilters==1.4.2
+parso==0.5.2
+pexpect==4.7.0
+pickleshare==0.7.5
+Pillow==6.2.1
+plotly==4.4.1
+portalocker==1.5.2
+prometheus-client==0.7.1
+prompt-toolkit==3.0.2
+PTable==0.9.2
+ptyprocess==0.6.0
+pydeck==0.2.1
+Pygments==2.5.2
+pyparsing==2.4.5
+pyrsistent==0.15.7
+pytesseract==0.3.1
+python-automaton==1.3.1
+python-dateutil==2.8.1
+pytz==2019.3
+pyzmq==18.1.1
+requests==2.22.0
+retrying==1.3.3
+scipy==1.4.1
+selenium==3.141.0
+Send2Trash==1.5.0
+six==1.13.0
+soupsieve==1.9.5
+sympy==1.5.1
+synapseclient==1.9.4
+tabulate==0.8.6
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.3
+tqdm==4.42.1
+traitlets==4.3.3
+truth-table-generator==1.0.1
+urllib3==1.25.7
+virtualenv==20.0.7
+wcwidth==0.1.7
+webencodings==0.5.1
 Werkzeug==1.0.0
-xattr==0.6.4
+widgetsnbextension==3.5.1
+wrapt==1.11.2
+zipp==2.0.0
