--- a/taist-2020-heroku/requirements.txt
+++ b/taist-2020-heroku/requirements.txt
@@ -60,6 +60,7 @@ plotly==4.4.1
 portalocker==1.5.2
 prometheus-client==0.7.1
 prompt-toolkit==3.0.2
+psycopg2==2.8.4
 PTable==0.9.2
 ptyprocess==0.6.0
 pydeck==0.2.1
